--- a/src/components/RepoItem/style.scss
+++ b/src/components/RepoItem/style.scss
@@ -1,5 +1,5 @@
 .box.repo {
-    max-width: 50%;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
     @media screen and (max-width: 768px) {
