--- a/src/components/views/Home/style.scss
+++ b/src/components/views/Home/style.scss
@@ -1,5 +1,5 @@
 .fetch-cta-block {
-    padding-bottom: 4rem;
-    margin-bottom: 4rem;
+    padding: 4rem 0;
+    margin: 0 0 4rem;
     border-bottom: 1px solid #ece4e4;
 }
